# PropertyHunter

./: .env.example  .gitignore  AGENTS.md  SPEC.md  pyproject.toml
src/: __init__.py  main.py
src/api/: app.py
src/common/: config.py  criteria.py  emailer.py  geo.py  price.py  suburb_profiles.py  suburb_profiles_sample.csv  suburbs_vic.txt
src/db/: database.py  schema.sql
src/ingest/: fetcher.py  parser.py  pipeline.py
src/jobs/: notify.py
src/ui/: app.py
